--- a/gaming/gaming.html
+++ b/gaming/gaming.html
@@ -20,7 +20,7 @@
                         <a href="">Home</a>
                     </li>
                     <li>
-                        <a href="">Our Shop</a>
+                        <a href="shop.html">Our Shop</a>
                     </li>
                     <li>
                         <a href="product.html">Product Details</a>
