--- a/gaming/product.html
+++ b/gaming/product.html
@@ -19,10 +19,10 @@
                         <a href="gaming.html">Home</a>
                     </li>
                     <li>
-                        <a href="">Our Shop</a>
+                        <a href="shop">Our Shop</a>
                     </li>
                     <li>
-                        <a href="">Product Details</a>
+                        <a href="product.html">Product Details</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact Us</a>
