--- a/gaming/shop.html
+++ b/gaming/shop.html
@@ -5,7 +5,180 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our shop</title>
     <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+    <div class="bg">
+        <header>
+            <div class="header">
+                <div class="nav">
+                    <img src="/gaming/logo (1).png">
+                </div>
+                <ul class="navbar">
+                    <li>
+                        <a href="gaming.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Our Shop</a>
+                    </li>
+                    <li>
+                        <a href="product.html">Product Details</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
+                <div class="sign">
+                    <a href="">sign in</a>
+                </div>
+            </div>
+        </header>
+        <div class="div1">
+            <h3>Our Shop</h3>
+            <span>Home&nbsp;>&nbsp;Shop</span>
+        </div>
+    </div>
+    <div class="div2">
+        <ul>
+            <li>
+                <a href="#" class="showall">Show all</a>
+            </li>
+            <li>
+                <a href="#" class="ad">Adventure</a>
+            </li>
+            <li>
+                <a href="#" class="st">Strategy</a>
+            </li>
+            <li>
+                <a href="#" class="rac">Racing</a>
+            </li>
+        </ul>
+    </div>
+    <div class="thumb">
+        <div class="img1">
+            <img src="/gaming/trending-01.jpg">
+            <span class="price"><em><strike>$36</strike></em><br>$24</span>
+            <div class="cat">
+                <span class="category">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div>
+        <div class="img2">
+            <img src="/gaming/trending-02.jpg">
+            <span class="price1"><em><strike>$32</strike></em><br>$22</span>
+            <div class="cat1">
+                <span class="category1">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div>
+        <div class="img3">
+            <img src="/gaming/trending-03.jpg">
+            <span class="price2"><em><strike>$45</strike></em><br>$30</span>
+            <div class="cat2">
+                <span class="category2">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div>
+        <div class="img4">
+            <img src="/gaming/trending-04.jpg">
+            <span class="price3"><em><strike>$32</strike><br>$22</em></span>
+            <div class="cat3">
+                <span class="category3">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="thumb1">
+        <div class="img5">
+            <img src="/gaming/trending-03.jpg">
+            <span class="price4"><em><strike>$38</strike></em><br>$26</span>
+            <div class="cat4">
+                <span class="category4">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div>
+        <div class="img6">
+            <img src="/gaming/trending-01.jpg">
+            <span class="price5"><em><strike>$30</strike></em><br>$20</span>
+            <div class="cat5">
+                <span class="category5">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div>
+        <div class="img7">
+            <img src="/gaming/trending-04.jpg">
+            <span class="price6"><em><strike>$32</strike><br>$22</em></span>
+            <div class="cat6">
+                <span class="category6">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div>
+        <div class="img8">
+            <img src="/gaming/trending-02.jpg">
+            <span class="price7"><em><strike>$32</strike></em><br>$22</span>
+            <div class="cat7">
+                <span class="category7">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="thumb2">
+        <div class="img9">
+            <img src="/gaming/trending-03.jpg">
+            <span class="price8"><em><strike>$28</strike></em><br>$20</span>
+            <div class="cat8">
+                <span class="category8">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div>
+        <div class="img10">
+            <img src="/gaming/trending-04.jpg">
+            <span class="price9"><em><strike>$26</strike><br>$18</em></span>
+            <div class="cat9">
+                <span class="category9">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div>
+        <div class="img11">
+            <img src="/gaming/trending-02.jpg">
+            <span class="price10"><em><strike>$32</strike></em><br>$24</span>
+            <div class="cat10">
+                <span class="category10">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div> 
+        <div class="img12">
+            <img src="/gaming/trending-01.jpg">
+            <span class="price11"><em><strike>$45</strike></em><br>$30</span>
+            <div class="cat11">
+                <span class="category11">Action</span>
+                <h4>Assasin Creed</h4>
+                <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="div3">
+        <ul>
+            <li><a href="#"> &lt; </a></li>
+            <li><a href="#">1</a></li>
+            <li><a class="is_active" href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#"> &gt; </a></li>
+        </ul>
+    </div>
+    <footer>
+        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+    </footer>
 </body>
 </html>
