--- a/JS tasks/task1/home.html
+++ b/JS tasks/task1/home.html
@@ -1,32 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Quiz form</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JS Quiz Web Application</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="loginPage" class="container mt-5">
+        <h2>Login to Start the Quiz</h2>
+        <form id="loginForm" class="mb-4">
+            <div class="mb-3">
+                <label for="username" class="form-label">Name</label>
+                <input type="text" class="form-control" id="username" required>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Start Quiz</button>
+        </form>
+    </div>
 
-  <form class="form-container" id="quizform">
-    <h2>JS Quiz Time</h2><br>
-    <div class="form-group">
-      <label for="name">User name</label>
-      <input type="text" class="form-control" id="name" placeholder="Enter username">
-      <span id="name_error"></span>
+    <div id="quizPage" class="container mt-5" style="display:none;">
+        <h2>JavaScript Quiz</h2>
+        <form id="quizForm">
+            <div id="quizQuestions"></div>
+            <button type="submit" class="btn btn-primary mt-4">Submit</button>
+        </form>
     </div>
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="text" class="form-control" id="email" placeholder="Enter email">
-      <span id="email_error"></span>
-    </div>
-    <div class="form-group">
-      <button type="submit" class="btn btn-success">Start Quiz</button>
-    </div>
-  </form>
-  
 
+    <div id="resultPage" class="container mt-5" style="display:none;">
+        <h2>Quiz Results</h2>
+        <div id="resultContent"></div>
+        <button class="btn btn-info mt-4" onclick="showDashboard()">View Ranking</button>
+    </div>
+
+    <div id="dashboardPage" class="container mt-5" style="display:none;">
+        <h2>User Dashboard</h2>
+        <table class="table table-striped mt-4">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Score</th>
+                    <th>Rank</th>
+                </tr>
+            </thead>
+            <tbody id="userTable"></tbody>
+        </table>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
